<resources>
    <string name="app_name">labasaper</string>
    <string name="start">start</string>
    <string name="button">button</string>
    <string name="textview">TextView</string>
    <string name="rows">rows</string>
    <string name="columns">columns</string>
    <string name="mines">mines</string>
    <string name="restart">restart</string>
    <string name="newgame">newgame</string>
    <string name="textvieww">textView</string>
</resources>
